[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/main.gd" type="Script" id=1]

[sub_resource type="ImageTexture" id=1]
size = Vector2( 256, 256 )

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUClock" type="Timer" parent="."]
process_mode = 0
wait_time = 0.016

[node name="Window" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="HBoxContainer" parent="Window"]
margin_right = 1024.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="Window/MenuContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Choose disk image...", null, 0, false, false, 0, 0, null, "", false, "Choose bootloader ROM...", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, true, 2, 0, null, "", true, "Exit", null, 0, false, false, 3, 0, null, "", false ]

[node name="SystemMenu" type="MenuButton" parent="Window/MenuContainer"]
margin_left = 39.0
margin_right = 98.0
margin_bottom = 20.0
text = "System"
items = [ "Start", null, 0, false, false, 0, 0, null, "", false, "Pause CPU", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, true, 2, 0, null, "", true, "Halt and reset system", null, 0, false, false, 3, 0, null, "", false ]

[node name="AboutMenu" type="MenuButton" parent="Window/MenuContainer"]
margin_left = 102.0
margin_right = 152.0
margin_bottom = 20.0
text = "About"

[node name="Panel" type="CenterContainer" parent="Window"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 582.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Screen" type="TextureRect" parent="Window/Panel"]
margin_left = 384.0
margin_top = 151.0
margin_right = 640.0
margin_bottom = 407.0
texture = SubResource( 1 )

[node name="StatusContainer" type="HBoxContainer" parent="Window"]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Status" type="Label" parent="Window/StatusContainer"]
margin_right = 39.0
margin_bottom = 14.0
text = "Status"

[node name="DiskFileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.bin" )
current_dir = "/Users/kylxbn/Documents/Software/kvm/vm"
current_path = "/Users/kylxbn/Documents/Software/kvm/vm/"

[node name="BootFileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.bin" )
current_dir = "/Users/kylxbn/Documents/Software/kvm/vm"
current_path = "/Users/kylxbn/Documents/Software/kvm/vm/"

[connection signal="timeout" from="CPUClock" to="." method="_on_CPUClock_timeout"]
[connection signal="file_selected" from="DiskFileDialog" to="." method="_on_DiskFileDialog_file_selected"]
[connection signal="file_selected" from="BootFileDialog" to="." method="_on_BootFileDialog_file_selected"]
